<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/take_a_picture"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_photo_camera_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_choose_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/choose_from_gallery"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_image_24" />

</LinearLayout>