<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <RelativeLayout
            android:id="@+id/big_relative_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_edit_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:textColorHint="@color/md_color_textHint"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_input_layout_user"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/app_login_pwd_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/md_color_textHint"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_below="@id/txt_input_layout_pwd"
                android:indeterminate="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_input_layout_pwd"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:text="@string/login" />

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_centerVertical="true">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:layout_toStartOf="@id/textview_or"/>

                <TextView
                    android:id="@+id/textview_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/txt_or" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:layout_toEndOf="@id/textview_or" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_google_login"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative_layout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/google_login"
                android:textSize="14sp"
                app:icon="@drawable/googleg_standard_color_18"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relative_layout" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textview_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/new_account"
            app:layout_constraintEnd_toStartOf="@+id/button_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/big_relative_layout" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textview_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textview_new_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>